# librespot-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
lib/cpp-httplib/: httplib.h
lib/dhexchange/: dhexchange.c
lib/protobuf-c/: Makefile.in  configure
lib/rapidjson/: reader.h
lib/shannon/: Shannon.h  ShannonFast.c  ShannonRef.c  ShannonTest.c  hexlib.c  hexlib.h
proto/: CMakeLists.txt
src/: ap_resolver.c  ap_resolver.cpp  ap_resolver.h  connection_holder.cpp  connection_holder.h  delayed_task.cpp  delayed_task.h  diffie_hellman.c  diffie_hellman.cpp  diffie_hellman.h  json.c  json.h  librespot_cpp.cpp  librespot_cpp.h  main.c  main.cpp  proxy_settings.cpp  proxy_settings.h  session.c  session.cpp  session.h  time_provider.cpp  time_provider.h  utils.cpp  utils.h  version.cpp  version.h
src/audio/: audio_key_manager.cpp  audio_key_manager.h
src/audio/decrypt/: aes_audio_decrypt.cpp  aes_audio_decrypt.h
src/audio/storage/: channel_manager.cpp  channel_manager.h
src/core/: ap_resolver.cpp  ap_resolver.h  event_service.cpp  event_service.h  session.cpp  session.h  time_provider.cpp  time_provider.h
src/crypto/: aes.cpp  aes.h  aes_128.cpp  aes_128.h  base_64.cpp  base_64.h  cipher_pair.cpp  cipher_pair.h  diffie_hellman.cpp  hmac_sha_1.cpp  hmac_sha_1.h  packet.cpp  packet.h  pbkdf2.cpp  pbkdf2.h  pbkdf_2.cpp  pbkdf_2.h  sha_1.cpp  sha_1.h
src/data/: asprintf.c  asprintf.h  base62.c  base62.cpp  base62.h  byte_list.c  byte_list.h  list.c  list.h
src/dealer/: dealer_client.cpp  dealer_client.h
src/exceptions/: aes_key_exception.h  cdn_exception.h  chunk_exception.h  content_restricted_exception.h  feeder_exception.h  mercury_exception.h  security_exception.h
src/mercury/: mercury_client.cpp  mercury_client.h  raw_mercury_request.cpp  raw_mercury_request.h
src/network/: http.c  http.cpp  http.h  zeroconf.cpp  zeroconf.h
src/utils/: byte_array.cpp  byte_array.h  byte_buffer.cpp  byte_buffer.h
